<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_margin="5dp">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/labelBusiness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:padding="5dp"
                android:text="@string/webserviceLabelBusiness"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewBusiness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <TextView
                android:id="@+id/labelZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:padding="5dp"
                android:text="@string/webserviceLabelZip"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <TextView
                android:id="@+id/labelPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:padding="5dp"
                android:text="@string/webserviceLabelPhone"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <TextView
                android:id="@+id/labelItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:padding="5dp"
                android:text="@string/webserviceLabelItem"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>