<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juanlucena.sdos.webserviceScreen.WebserviceActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/addTaskChooseTask"/>

                <Spinner
                    android:id="@+id/spinnerTaskList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/addTaskAsignTech"/>

                <Spinner
                    android:id="@+id/spinnerTechnicianList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/addTaskTime"/>

                <EditText
                    android:id="@+id/editTextTaskTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:background="@drawable/border_edit_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/addTaskDescription"/>

                <EditText
                    android:id="@+id/editTextTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:inputType="textMultiLine"
                    android:background="@drawable/border_edit_text"
                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:maxLines="10"
                    android:scrollbars="vertical"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
