<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="10dp"
        android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:paddingLeft="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/labelViewTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/taskListLabelName"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/textViewTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/labelViewTaskTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/taskListLabelStimatedTime"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/textViewTaskTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/labelViewTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/taskListLabelDescription"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/textViewTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBoxTaskFinished"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>